--- a/views/login.html
+++ b/views/login.html
@@ -87,7 +87,7 @@
     <header>
         <h1>GROUP CHAT</h1>
     </header>
-    <a href="http://localhost:3000/signup" id="signup">SIGN UP</a>
+    <a href="http://13.55.186.26:3000/signup" id="signup">SIGN UP</a>
    <form id="form-loginPage">
     <p>LOGIN</p>
     <input type="text" name="error" id="error">
